# mcp-tool-server-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_tool_server/: __init__.py  __main__.py  cli.py  protocol.py  server.py  tools.py  transport.py
tests/: test_e2e_stdio.py  test_protocol.py  test_server_initialize.py  test_server_tools_call.py  test_server_tools_list.py  test_tools.py  test_unknown_method.py
