[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tool-server-template"
version = "0.1.0"
description = "A small, dependency-free Python template for building Model Context Protocol (MCP) servers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta" }]
keywords = ["mcp", "model-context-protocol", "json-rpc", "stdio", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
mts = "mcp_tool_server.cli:main"

[project.urls]
Homepage = "https://github.com/MukundaKatta/mcp-tool-server-template"
Issues = "https://github.com/MukundaKatta/mcp-tool-server-template/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_tool_server = ["py.typed"]
